hphp/hack/test/typecheck/constraints/where_on_function_callsite.php.exp
File "where_on_function_callsite.php", line 11, characters 12-13:
Invalid argument (Typing[4110])
  File "where_on_function_callsite.php", line 4, characters 40-42:
  This is an int
  File "where_on_function_callsite.php", line 10, characters 8-14:
  It is incompatible with a string
