hphp/hack/test/typecheck/constraints/where_on_function_callsite.php
<?hh // strict


function foo<T> (T $x) : int where T = int {
  return $x;
}

function test() : void {
  $x = 5;
  $y = "hello";
  $z = foo($y); // error
}
